updated with required libraries

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "prettier": "^1.15.3",
     "nodemon": "^1.19.1",
+    "prettier": "^1.15.3",
     "rimraf": "^3.0.0"
   },
   "scripts": {
@@ -26,5 +26,14 @@
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/list": "^5.5.0",
+    "@fullcalendar/react": "^5.5.0",
+    "@fullcalendar/timegrid": "^5.5.1",
+    "grommet": "^2.16.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
